crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__yield__named_expression.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/yield/named_expression.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..85,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 52..59,
                    value: Yield(
                        ExprYield {
                            node_index: NodeIndex(None),
                            range: 52..59,
                            value: Some(
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 58..59,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 63..64,
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            node_index: NodeIndex(None),
                            range: 63..64,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 66..84,
                    value: Yield(
                        ExprYield {
                            node_index: NodeIndex(None),
                            range: 66..84,
                            value: Some(
                                Tuple(
                                    ExprTuple {
                                        node_index: NodeIndex(None),
                                        range: 72..84,
                                        elts: [
                                            NumberLiteral(
                                                ExprNumberLiteral {
                                                    node_index: NodeIndex(None),
                                                    range: 72..73,
                                                    value: Int(
                                                        1,
                                                    ),
                                                },
                                            ),
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 75..76,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            NumberLiteral(
                                                ExprNumberLiteral {
                                                    node_index: NodeIndex(None),
                                                    range: 80..81,
                                                    value: Int(
                                                        2,
                                                    ),
                                                },
                                            ),
                                            NumberLiteral(
                                                ExprNumberLiteral {
                                                    node_index: NodeIndex(None),
                                                    range: 83..84,
                                                    value: Int(
                                                        3,
                                                    ),
                                                },
                                            ),
                                        ],
                                        ctx: Load,
                                        parenthesized: false,
                                        is_anon_named_tuple: false,
                                        is_anon_named_tuple_value: false,
                                        callable_shape: None,
                                        is_parameter_shape: false,
                                    },
                                ),
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # Unparenthesized named expressions are not allowed
2 | yield x := 1
  |         ^^ Syntax Error: Expected a statement
3 |
4 | yield 1, x := 2, 3
  |


  |
2 | yield x := 1
3 |
4 | yield 1, x := 2, 3
  |            ^^ Syntax Error: Expected `,`, found `:=`
